--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "node": true,
     "es6": true
   },
-  "extends": ["eslint:recommended"],
+  "extends": ["airbnb-base"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
