--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "workbox-webpack-plugin": "^6.6.0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "eslint-plugin-import": "^2.27.5",
     "regenerator-runtime": "^0.13.11",
     "workbox-window": "^6.6.0"
