--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "css-loader": "^6.7.4",
     "eslint": "^8.41.0",
     "html-webpack-plugin": "^5.5.1",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.84.1",
+    "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
     "webpack-merge": "^5.9.0",
@@ -31,6 +34,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "eslint-plugin-import": "^2.27.5",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.11",
     "workbox-window": "^6.6.0"
   }
